# k9_chess_pkg

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
k9_chess/: action_client_wrapper.py  chess_bt_node.py  chess_engine_node.py  chess_state_node.py  game_manager_node.py  move_sender_node.py
k9_chess/bt/: chess_bt.py
k9_chess/k9_chess/: chess_state_node.py
k9_chess/k9_chess/launch/: chess_launch.py
k9_chess/utils/: phrases.py
k9_chess_interfaces/: package.xml  setup.py
k9_chess_interfaces/action/: ComputeMove.action
k9_chess_interfaces/msg/: BoardState.msg  GameEvent.msg
k9_chess_interfaces/srv/: GetState.srv  SendMove.srv  StartGame.srv  StopGame.srv
launch/: chess_launch.py
log/: latest_build
