<package format="3">
  <name>k9_chess</name>
  <version>0.1.0</version>
  <description>ROS 2 Python nodes for K9 Chess Robot</description>
  <maintainer email="hopkira@gmail.com">Richard Hopkins</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-chess</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
