<?xml version="1.0"?>
<package format="3">
  <name>k9_chess_interfaces</name>
  <version>0.1.0</version>
  <description>Interfaces for K9 chess robot: actions, services, messages.</description>
  <maintainer email="richard@example.com">Richard Hopkins</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rosidl_default_runtime</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>